--- a/js/problems/Problem-12-CheckPalindrome/index.html
+++ b/js/problems/Problem-12-CheckPalindrome/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reverse Word</title>
+    <title>Check Palindrome</title>
 </head>
 <body>
-    <script src="ReverseWord.js" type="module"></script>
+    
 </body>
+<script src="CheckPalindrome.js" type="module"></script>
 </html>
